# advent_of_code

./: .gitignore
2025/: README.md
2025/days/day01/: Cargo.toml  README.md  input.txt
2025/days/day01/benches/: bench.rs
2025/days/day01/src/: lib.rs
2025/days/day02/: Cargo.toml  README.md
2025/days/day02/benches/: bench.rs
2025/days/day02/src/: lib.rs
2025/days/day03/: Cargo.toml  README.md  input.txt
2025/days/day03/benches/: bench.rs
2025/days/day03/src/: lib.rs
2025/days/day04/: Cargo.toml  README.md  input.txt
2025/days/day04/benches/: bench.rs
2025/days/day04/src/: lib.rs
2025/days/day05/: Cargo.toml  README.md  input.txt
2025/days/day05/benches/: bench.rs
2025/days/day05/src/: lib.rs
