[package]
name = "day05"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
# range-collections = "0.4.6"
# smallvec = "1.15.1"
range-set-blaze = "0.4.1"

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "day05"
path = "src/bin/day05.rs"
